[project]
name = "ha-blueiq"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Viera",email = "anthonyviera4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.14.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
