[project]
name = "ha-blueiq"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Viera",email = "anthonyviera4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14.2 <4.0.0"
dependencies = [
    "aiohttp (>=3.14.1,<4.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
aioresponses = "^0.7.9"
homeassistant = "^2026.7.2"

