[project]
name = "ha-blueiq"
version = "0.1.0"
description = ""
authors = [
    { name = "Anthony Viera", email = "anthonyviera4@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
homeassistant = "2026.7.2"
pytest-asyncio = "^1.4.0"
pytest-aiohttp = "^1.1.1"
pytest-homeassistant-custom-component = "0.13.346"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]